--- a/aspnet-core/host/SuperAbp.MenuManagement.Host.Shared/SuperAbp.MenuManagement.Host.Shared.csproj
+++ b/aspnet-core/host/SuperAbp.MenuManagement.Host.Shared/SuperAbp.MenuManagement.Host.Shared.csproj
@@ -3,9 +3,17 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
 	  <IsPackable>false</IsPackable>
     <RootNamespace>SuperAbp.MenuManagement</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Update="ConfigureAwait.Fody" Version="3.3.2" />
+    <PackageReference Update="Fody" Version="6.6.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
 
 </Project>
