--- a/aspnet-core/host/SuperAbp.MenuManagement.HttpApi.Host/appsettings.json
+++ b/aspnet-core/host/SuperAbp.MenuManagement.HttpApi.Host/appsettings.json
@@ -3,8 +3,8 @@
     "CorsOrigins": "https://*.MenuManagement.com,http://localhost:4200,http://localhost:44307,https://localhost:44307"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=MenuManagement_Main;Trusted_Connection=True",
-    "MenuManagement": "Server=(LocalDb)\\MSSQLLocalDB;Database=MenuManagement_Module;Trusted_Connection=True"
+    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=MenuManagement_Main;Trusted_Connection=True;TrustServerCertificate=True",
+    "MenuManagement": "Server=(LocalDb)\\MSSQLLocalDB;Database=MenuManagement_Module;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
