--- a/aspnet-core/host/SuperAbp.MenuManagement.AuthServer/SuperAbp.MenuManagement.AuthServer.csproj
+++ b/aspnet-core/host/SuperAbp.MenuManagement.AuthServer/SuperAbp.MenuManagement.AuthServer.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>SuperAbp.MenuManagement</RootNamespace>
 	  <IsPackable>false</IsPackable>
     <PreserveCompilationReferences>true</PreserveCompilationReferences>
@@ -11,42 +11,42 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
-    <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="6.0.5" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.5">
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="7.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.MultiTenancy" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.Swashbuckle" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.Account.Web.OpenIddict" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.Account.Application" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.Account.HttpApi" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.SettingManagement.Application" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.SettingManagement.HttpApi" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.OpenIddict.EntityFrameworkCore" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.Identity.EntityFrameworkCore" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.Identity.Application" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.EntityFrameworkCore" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.TenantManagement.EntityFrameworkCore" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.TenantManagement.HttpApi" Version="6.0.0" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.MultiTenancy" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.Swashbuckle" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.Account.Web.OpenIddict" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.Account.Application" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.Account.HttpApi" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Application" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.SettingManagement.HttpApi" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.OpenIddict.EntityFrameworkCore" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.Identity.EntityFrameworkCore" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.Identity.Application" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.EntityFrameworkCore" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.TenantManagement.EntityFrameworkCore" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.TenantManagement.HttpApi" Version="7.0.2" />
     <ProjectReference Include="..\..\src\SuperAbp.MenuManagement.Application.Contracts\SuperAbp.MenuManagement.Application.Contracts.csproj" />
     <ProjectReference Include="..\SuperAbp.MenuManagement.Host.Shared\SuperAbp.MenuManagement.Host.Shared.csproj" />
   </ItemGroup>
@@ -65,6 +65,14 @@
     <None Update="Pages\**\*.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="ConfigureAwait.Fody" Version="3.3.2" />
+    <PackageReference Update="Fody" Version="6.6.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
