--- a/aspnet-core/host/SuperAbp.MenuManagement.AuthServer/appsettings.json
+++ b/aspnet-core/host/SuperAbp.MenuManagement.AuthServer/appsettings.json
@@ -5,7 +5,7 @@
   },
   "AppSelfUrl": "https://localhost:44376/",
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=MenuManagement_Main;Trusted_Connection=True"
+    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=MenuManagement_Main;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
