--- a/aspnet-core/host/SuperAbp.MenuManagement.Blazor.Host/SuperAbp.MenuManagement.Blazor.Host.csproj
+++ b/aspnet-core/host/SuperAbp.MenuManagement.Blazor.Host/SuperAbp.MenuManagement.Blazor.Host.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <Import Project="..\..\common.props" />
 
@@ -15,15 +15,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Autofac.WebAssembly" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Components.WebAssembly.BasicTheme" Version="6.0.0" />
+    <PackageReference Include="Volo.Abp.Autofac.WebAssembly" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Components.WebAssembly.BasicTheme" Version="7.0.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.Identity.Blazor.WebAssembly" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Blazor.WebAssembly" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.SettingManagement.Blazor.WebAssembly" Version="6.0.0" />
+    <PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.Identity.Blazor.WebAssembly" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Blazor.WebAssembly" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Blazor.WebAssembly" Version="7.0.2" />
   </ItemGroup>
 
   <ItemGroup>
