--- a/aspnet-core/host/SuperAbp.MenuManagement.Blazor.Server.Host/SuperAbp.MenuManagement.Blazor.Server.Host.csproj
+++ b/aspnet-core/host/SuperAbp.MenuManagement.Blazor.Server.Host/SuperAbp.MenuManagement.Blazor.Server.Host.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <Import Project="..\..\common.props" />
 
@@ -21,29 +21,29 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\src\SuperAbp.MenuManagement.Application\SuperAbp.MenuManagement.Application.csproj" />
-        <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="6.0.0" />
-        <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="6.0.0" />
-        <PackageReference Include="Volo.Abp.Autofac" Version="6.0.0" />
-        <PackageReference Include="Volo.Abp.Swashbuckle" Version="6.0.0" />
-        <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="6.0.0" />
-        <PackageReference Include="Volo.Abp.AspNetCore.Components.Server.BasicTheme" Version="6.0.0" />
-        <PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="6.0.0" />
-        <PackageReference Include="Volo.Abp.Account.Web.OpenIddict" Version="6.0.0" />
-        <PackageReference Include="Volo.Abp.Account.Application" Version="6.0.0" />
-        <PackageReference Include="Volo.Abp.FeatureManagement.EntityFrameworkCore" Version="6.0.0" />
-        <PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="6.0.0" />
-        <PackageReference Include="Volo.Abp.Identity.Blazor.Server" Version="6.0.0" />
-        <PackageReference Include="Volo.Abp.Identity.EntityFrameworkCore" Version="6.0.0" />
-        <PackageReference Include="Volo.Abp.Identity.Application" Version="6.0.0" />
-        <PackageReference Include="Volo.Abp.TenantManagement.Blazor.Server" Version="6.0.0" />
-        <PackageReference Include="Volo.Abp.TenantManagement.EntityFrameworkCore" Version="6.0.0" />
-        <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="6.0.0" />
-        <PackageReference Include="Volo.Abp.SettingManagement.Blazor.Server" Version="6.0.0" />
-        <PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="6.0.0" />
-        <PackageReference Include="Volo.Abp.SettingManagement.Application" Version="6.0.0" />
-        <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="6.0.0" />
-        <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="6.0.0" />
-        <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="6.0.0" />
+        <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.Autofac" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.Swashbuckle" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.AspNetCore.Components.Server.BasicTheme" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.Account.Web.OpenIddict" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.Account.Application" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.FeatureManagement.EntityFrameworkCore" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.Identity.Blazor.Server" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.Identity.EntityFrameworkCore" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.Identity.Application" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.TenantManagement.Blazor.Server" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.TenantManagement.EntityFrameworkCore" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.SettingManagement.Blazor.Server" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.SettingManagement.Application" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="7.0.2" />
         <ProjectReference Include="..\..\src\SuperAbp.MenuManagement.Blazor.Server\SuperAbp.MenuManagement.Blazor.Server.csproj" />
         <ProjectReference Include="..\..\src\SuperAbp.MenuManagement.EntityFrameworkCore\SuperAbp.MenuManagement.EntityFrameworkCore.csproj" />
         <ProjectReference Include="..\..\src\SuperAbp.MenuManagement.HttpApi\SuperAbp.MenuManagement.HttpApi.csproj" />
