--- a/aspnet-core/host/SuperAbp.MenuManagement.Web.Host/SuperAbp.MenuManagement.Web.Host.csproj
+++ b/aspnet-core/host/SuperAbp.MenuManagement.Web.Host/SuperAbp.MenuManagement.Web.Host.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>SuperAbp.MenuManagement</RootNamespace>
 	  <IsPackable>false</IsPackable>
     <PreserveCompilationReferences>true</PreserveCompilationReferences>
@@ -11,27 +11,27 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
-    <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="6.0.5" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.Client" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Authentication.OpenIdConnect" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.Http.Client.IdentityModel.Web" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.Http.Client.Web" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.Swashbuckle" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.Identity.Web" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.Identity.HttpApi.Client" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Web" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi.Client" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Web" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.TenantManagement.HttpApi.Client" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi.Client" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.SettingManagement.Web" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.SettingManagement.HttpApi.Client" Version="6.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="7.0.3" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.Client" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Authentication.OpenIdConnect" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.Http.Client.IdentityModel.Web" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.Http.Client.Web" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.Swashbuckle" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.Identity.Web" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.Identity.HttpApi.Client" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Web" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi.Client" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Web" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.TenantManagement.HttpApi.Client" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi.Client" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Web" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.SettingManagement.HttpApi.Client" Version="7.0.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -55,6 +55,14 @@
     <None Update="Pages\**\*.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="ConfigureAwait.Fody" Version="3.3.2" />
+    <PackageReference Update="Fody" Version="6.6.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
