--- a/aspnet-core/host/SuperAbp.MenuManagement.Web.Unified/appsettings.json
+++ b/aspnet-core/host/SuperAbp.MenuManagement.Web.Unified/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=MenuManagement_Unified;Trusted_Connection=True"
+    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=MenuManagement_Unified;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
