--- a/aspnet-core/src/SuperAbp.MenuManagement.Application.Contracts/SuperAbp.MenuManagement.Application.Contracts.csproj
+++ b/aspnet-core/src/SuperAbp.MenuManagement.Application.Contracts/SuperAbp.MenuManagement.Application.Contracts.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>SuperAbp.MenuManagement</RootNamespace>
   </PropertyGroup>
 
@@ -14,9 +14,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Ddd.Application.Contracts" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.Authorization" Version="6.0.0" />
+    <PackageReference Include="Volo.Abp.Ddd.Application.Contracts" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.Authorization" Version="7.0.2" />
     <ProjectReference Include="..\SuperAbp.MenuManagement.Domain.Shared\SuperAbp.MenuManagement.Domain.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="ConfigureAwait.Fody" Version="3.3.2" />
+    <PackageReference Update="Fody" Version="6.6.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
