--- a/aspnet-core/src/SuperAbp.MenuManagement.Blazor.WebAssembly/SuperAbp.MenuManagement.Blazor.WebAssembly.csproj
+++ b/aspnet-core/src/SuperAbp.MenuManagement.Blazor.WebAssembly/SuperAbp.MenuManagement.Blazor.WebAssembly.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
     <Import Project="..\..\common.props" />
 
@@ -7,7 +7,7 @@
     </PropertyGroup>
     
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.AspNetCore.Components.WebAssembly.Theming" Version="6.0.0" />
+        <PackageReference Include="Volo.Abp.AspNetCore.Components.WebAssembly.Theming" Version="7.0.2" />
     </ItemGroup>
 
     <ItemGroup>
