--- a/aspnet-core/src/SuperAbp.MenuManagement.EntityFrameworkCore/SuperAbp.MenuManagement.EntityFrameworkCore.csproj
+++ b/aspnet-core/src/SuperAbp.MenuManagement.EntityFrameworkCore/SuperAbp.MenuManagement.EntityFrameworkCore.csproj
@@ -1,15 +1,23 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>SuperAbp.MenuManagement</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="6.0.0" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="7.0.2" />
     <ProjectReference Include="..\SuperAbp.MenuManagement.Domain\SuperAbp.MenuManagement.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="ConfigureAwait.Fody" Version="3.3.2" />
+    <PackageReference Update="Fody" Version="6.6.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
