--- a/aspnet-core/src/SuperAbp.MenuManagement.Web/SuperAbp.MenuManagement.Web.csproj
+++ b/aspnet-core/src/SuperAbp.MenuManagement.Web/SuperAbp.MenuManagement.Web.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <AssetTargetFallback>$(AssetTargetFallback);portable-net45+win8+wp8+wpa81;</AssetTargetFallback>
     <IsPackable>true</IsPackable>
     <OutputType>Library</OutputType>
@@ -12,9 +12,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="SuperAbp.AspNetCore.Mvc.UI.Packages.ZTree" Version="1.0.1" />
-    <PackageReference Include="Volo.Abp.AutoMapper" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Shared" Version="6.0.0" />
+    <PackageReference Include="SuperAbp.AspNetCore.Mvc.UI.Packages.ZTree" Version="1.1.0" />
+    <PackageReference Include="Volo.Abp.AutoMapper" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Shared" Version="7.0.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="6.0.5" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="7.0.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -40,6 +40,14 @@
 
   <ItemGroup>
     <None Remove="Pages\Menus\index.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="ConfigureAwait.Fody" Version="3.3.2" />
+    <PackageReference Update="Fody" Version="6.6.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
