--- a/aspnet-core/test/SuperAbp.MenuManagement.Domain.Tests/SuperAbp.MenuManagement.Domain.Tests.csproj
+++ b/aspnet-core/test/SuperAbp.MenuManagement.Domain.Tests/SuperAbp.MenuManagement.Domain.Tests.csproj
@@ -3,14 +3,22 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>SuperAbp.MenuManagement</RootNamespace>
 	  <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <ProjectReference Include="..\SuperAbp.MenuManagement.EntityFrameworkCore.Tests\SuperAbp.MenuManagement.EntityFrameworkCore.Tests.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="ConfigureAwait.Fody" Version="3.3.2" />
+    <PackageReference Update="Fody" Version="6.6.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
