--- a/aspnet-core/test/SuperAbp.MenuManagement.HttpApi.Client.ConsoleTestApp/SuperAbp.MenuManagement.HttpApi.Client.ConsoleTestApp.csproj
+++ b/aspnet-core/test/SuperAbp.MenuManagement.HttpApi.Client.ConsoleTestApp/SuperAbp.MenuManagement.HttpApi.Client.ConsoleTestApp.csproj
@@ -1,15 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>SuperAbp.MenuManagement</RootNamespace>
 	  <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Http.Client.IdentityModel" Version="6.0.0" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="6.0.0" />
+    <PackageReference Include="Volo.Abp.Http.Client.IdentityModel" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="7.0.2" />
     <ProjectReference Include="..\..\src\SuperAbp.MenuManagement.HttpApi.Client\SuperAbp.MenuManagement.HttpApi.Client.csproj" />
   </ItemGroup>
 
@@ -27,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
   </ItemGroup>
 
 </Project>
