--- a/aspnet-core/src/SuperAbp.MenuManagement.Domain.Shared/SuperAbp.MenuManagement.Domain.Shared.csproj
+++ b/aspnet-core/src/SuperAbp.MenuManagement.Domain.Shared/SuperAbp.MenuManagement.Domain.Shared.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>SuperAbp.MenuManagement</RootNamespace>
     <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
   </PropertyGroup>
