--- a/aspnet-core/src/SuperAbp.MenuManagement.Domain/SuperAbp.MenuManagement.Domain.csproj
+++ b/aspnet-core/src/SuperAbp.MenuManagement.Domain/SuperAbp.MenuManagement.Domain.csproj
@@ -3,12 +3,12 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>SuperAbp.MenuManagement</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Ddd.Domain" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.Ddd.Domain" Version="7.1.0" />
     <ProjectReference Include="..\SuperAbp.MenuManagement.Domain.Shared\SuperAbp.MenuManagement.Domain.Shared.csproj" />
   </ItemGroup>
 
