--- a/aspnet-core/src/SuperAbp.MenuManagement.Domain.Shared/SuperAbp.MenuManagement.Domain.Shared.csproj
+++ b/aspnet-core/src/SuperAbp.MenuManagement.Domain.Shared/SuperAbp.MenuManagement.Domain.Shared.csproj
@@ -6,6 +6,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>SuperAbp.MenuManagement</RootNamespace>
     <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
+	  <PackageProjectUrl>https://superabp.com/</PackageProjectUrl>
+	  <RepositoryUrl>https://github.com/SuperAbp/MenuManagement</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
