--- a/aspnet-core/src/SuperAbp.MenuManagement.EntityFrameworkCore/SuperAbp.MenuManagement.EntityFrameworkCore.csproj
+++ b/aspnet-core/src/SuperAbp.MenuManagement.EntityFrameworkCore/SuperAbp.MenuManagement.EntityFrameworkCore.csproj
@@ -5,6 +5,8 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>SuperAbp.MenuManagement</RootNamespace>
+	  <PackageProjectUrl>https://superabp.com/</PackageProjectUrl>
+	  <RepositoryUrl>https://github.com/SuperAbp/MenuManagement</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
