--- a/aspnet-core/src/SuperAbp.MenuManagement.Application/SuperAbp.MenuManagement.Application.csproj
+++ b/aspnet-core/src/SuperAbp.MenuManagement.Application/SuperAbp.MenuManagement.Application.csproj
@@ -5,6 +5,9 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>SuperAbp.MenuManagement</RootNamespace>
+<Authors>SuperAbp</Authors>
+	  <Company>SuperAbp</Company>
+	  <Product>SuperAbp.MenuManagement</Product>
 	  <PackageProjectUrl>https://superabp.com/</PackageProjectUrl>
 	  <RepositoryUrl>https://github.com/SuperAbp/MenuManagement</RepositoryUrl>
   </PropertyGroup>
