--- a/aspnet-core/src/SuperAbp.MenuManagement.Web/SuperAbp.MenuManagement.Web.csproj
+++ b/aspnet-core/src/SuperAbp.MenuManagement.Web/SuperAbp.MenuManagement.Web.csproj
@@ -9,6 +9,9 @@
     <OutputType>Library</OutputType>
     <RootNamespace>SuperAbp.MenuManagement.Web</RootNamespace>
     <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
+	  <Authors>SuperAbp</Authors>
+	  <Company>SuperAbp</Company>
+	  <Product>SuperAbp.MenuManagement</Product>
 	  <PackageProjectUrl>https://superabp.com/</PackageProjectUrl>
 	  <RepositoryUrl>https://github.com/SuperAbp/MenuManagement</RepositoryUrl>
   </PropertyGroup>
